--- a/templates/includes/nawbar.html
+++ b/templates/includes/nawbar.html
@@ -18,7 +18,6 @@
         </div> <!-- navbar-collapse .// -->
       </div> <!-- container //  -->
     </nav>
-    
 
 
     <section class="header-main border-bottom">
@@ -33,7 +32,7 @@
 					<div class="col-lg col-sm col-md col-6 flex-grow-0">
 						<div class="category-wrap dropdown d-inline-block float-right">
 							<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"> 
-								<i class="fa fa-bars"></i> Усі категорії 
+								<i class="fa fa-bars"></i> Усі категорії
 							</button>
 							<div class="dropdown-menu">
 								<a class="dropdown-item" href="{% url 'store' %}"> Усі товари </a>
@@ -59,7 +58,8 @@
               </div>
           	</form> <!-- search-wrap .end// -->
         	</div> <!-- col.// -->
-       		<div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
+       		
+          <div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
             <div class="d-flex justify-content-end mb-3 mb-lg-0">
               <div class="widget-header">
                 <small class="title text-muted">Welcome guest!</small>
@@ -69,9 +69,9 @@
                 </div>
               </div>
               
-							<a href="./cart.html" class="widget-header pl-3 ml-3">
+							<a href="{% url 'cart' %}" class="widget-header pl-3 ml-3">
               	<div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
-                <span class="badge badge-pill badge-danger notify">0</span>
+                <span class="badge badge-pill badge-danger notify"> {{ cart_count }}</span>
               </a>
             </div> <!-- widgets-wrap.// -->
           </div> <!-- col.// -->
