--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -5,10 +5,15 @@
 {% block content %}
 
 
+
 <!-- ========================= SECTION PAGETOP ========================= -->
 <section class="section-pagetop bg">
 	<div class="container">
-		<h2 class="title-page">Наші товари</h2>
+		{% if 'search' in request.path %}
+			<h2 class="title-page">Результати пошуку</h2>
+		{% else %}
+			<h2 class="title-page">Наші товари</h2>
+		{% endif %}
 	</div> <!-- container //  -->
 </section>
 <!-- ========================= SECTION INTRO END// ========================= -->
@@ -134,7 +139,8 @@
 				</header><!-- sect-heading -->
 
 				<div class="row">
-				  {% for product in products %}
+					{% if products %}
+				    {% for product in products %}
 						<div class="col-md-4">
 							<figure class="card card-product-grid">
 								
@@ -149,23 +155,47 @@
 											<span class="price"> ₴ {{ product.price }} </span>
 										</div> <!-- price-wrap.// -->
 									</div>
-									<a href="{% url 'add_cart' product.id %}" class="btn btn-block btn-primary">Додати до кошика </a>
-								</figcaption>
+									{% if product.stock <= 0 %}
+										<h6 class='text-danger text-center'>Немає в наявності</h6>
+									{% else %}
+										<a href="{% url 'add_cart' product.id %}" class="btn btn-block btn-primary">Додати до кошика </a>
+									{% endif %}
+									</figcaption>
 
 							</figure>
 						</div> <!-- col.// -->
 				  {% endfor %}
+				  {% else %}
+						<h2>Нічого не знайдено. Повторіть спробу.</h2>
+				  {% endif %}
 				</div> <!-- row end.// -->
 
 
 				<nav class="mt-4" aria-label="Page navigation sample">
-  				<ul class="pagination">
-    				<li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
-    				<li class="page-item active"><a class="page-link" href="#">1</a></li>
-    				<li class="page-item"><a class="page-link" href="#">2</a></li>
-    				<li class="page-item"><a class="page-link" href="#">3</a></li>
-    				<li class="page-item"><a class="page-link" href="#">Next</a></li>
-  				</ul>
+					{% if products.has_other_pages %}
+  					<ul class="pagination">
+							{% if products.has_previous %}
+    						<li class="page-item"><a class="page-link" href="?page={{ products.previous_page_number }}">Previous</a></li>
+							{% else %}
+								<li class="page-item disabled"><a class="page-link" href="">Previous</a></li>
+							{% endif %}
+
+							{% for i in products.paginator.page_range %}
+								{% if products.number == i %}
+    							<li class="page-item active"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+								{% else %}
+									<li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+								{% endif %}
+							{% endfor %}
+
+    					{% if products.has_next %}
+								<li class="page-item"><a class="page-link" href="?page={{ products.next_page_number }}">Next</a></li>
+							{% else %}
+							  <li class="page-item disabled"><a class="page-link" href="">Next</a></li>
+							{% endif %}
+
+  					</ul>
+					{% endif %}
 				</nav>
 
 			</main> <!-- col.// -->
