--- a/ecommerce/static/css/bootstrap.css
+++ b/ecommerce/static/css/bootstrap.css
@@ -9,6 +9,10 @@ Bootstrap with custom variables
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 :root {
+  --sand: #846654;
+  --sand-dark-text: #725949;
+  --sand-hover: #97745e;
+  --sandy-gradient: rgba(199, 157, 117, 0.5);
   --blue: #3167eb;
   --indigo: #6610f2;
   --purple: #6f42c1;
@@ -2391,20 +2395,20 @@ fieldset:disabled a.btn {
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #725949;
-  border-color: #695142;
+  background-color: #846654;
+  border-color: #846654;
 }
 .btn-primary:focus, .btn-primary.focus {
   box-shadow: 0 0 0 0.2rem rgba(199, 157, 117, 0.5);
 }
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #846654;
+  background-color: #97745e;
   border-color: #846654;
 }
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #695142;
+  background-color: #846654;
   border-color: #846654;
 }
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
@@ -4602,13 +4606,13 @@ input[type=button].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #3167eb;
+  color: var(--sand-dark-text);
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
 .page-link:hover {
   z-index: 2;
-  color: #1244bd;
+  color: var(--sand-hover);
   text-decoration: none;
   background-color: #e4e4e4;
   border-color: #dee2e6;
@@ -4616,7 +4620,7 @@ input[type=button].btn-block {
 .page-link:focus {
   z-index: 2;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(49, 103, 235, 0.25);
+  box-shadow: 0 0 0 0.2rem var(--light);
 }
 
 .page-item:first-child .page-link {
@@ -4631,8 +4635,8 @@ input[type=button].btn-block {
 .page-item.active .page-link {
   z-index: 1;
   color: #fff;
-  background-color: #3167eb;
-  border-color: #3167eb;
+  background-color: var(--sand-hover);
+  border-color: var(--sand);
 }
 .page-item.disabled .page-link {
   color: #545454;
