--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
 
   	<header class="section-heading">
 			<a href="{% url 'store' %}" class="btn btn-outline-primary float-right">Переглянути все</a>
-			<h3 class="section-title">Популярні товари</h3>
+			<h3 class="section-title">Наші товари</h3>
   	</header><!-- sect-heading -->
 	
   	<div class="row">
