--- a/templates/includes/nawbar.html
+++ b/templates/includes/nawbar.html
@@ -1,24 +1,6 @@
 {% load static %}
 
   <header class="section-header">
-    <nav class="navbar p-md-0 navbar-expand-sm navbar-light border-bottom">
-      <div class="container">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTop4" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTop4">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item dropdown"><a href="#" class="nav-link"> English </a></li>
-            <li class="nav-item dropdown"><a href="#" class="nav-link"> USD </a></li>
-          </ul>
-          <ul class="navbar-nav">
-            <li><a href="#" class="nav-link"> <i class="fa fa-envelope"></i> Email </a></li>
-            <li><a href="#" class="nav-link"> <i class="fa fa-phone"></i> Call us </a></li>
-          </ul> <!-- list-inline //  -->
-        </div> <!-- navbar-collapse .// -->
-      </div> <!-- container //  -->
-    </nav>
-
 
     <section class="header-main border-bottom">
       <div class="container">
@@ -48,7 +30,7 @@
 					<div class="col-lg  col-md-6 col-sm-12 col">
           	<form action="{% url 'search' %}" class="search">
             	<div class="input-group w-100">
-                <input type="text" class="form-control" style="width:60%;" placeholder="Search" name='keyword'>
+                <input type="text" class="form-control" style="width:60%;" placeholder="Пошук" name='keyword'>
                 
                 <div class="input-group-append">
                   <button class="btn btn-primary" type="submit">
@@ -61,18 +43,29 @@
        		
           <div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
             <div class="d-flex justify-content-end mb-3 mb-lg-0">
+              {% if user.id is None %}
               <div class="widget-header">
-                <small class="title text-muted">Welcome guest!</small>
+                <small class="title text-muted">Вітаємо гість!</small>
                 <div> 
-                  <a href="./signin.html">Sign in</a> <span class="dark-transp"> | </span>
-                  <a href="./register.html"> Register</a>
+                  <a href="{% url 'login' %}">Увійти</a> <span class="dark-transp"> | </span>
+                  <a href="{% url 'register' %}"> Зареєструватися</a>
                 </div>
               </div>
-              
+              {% else %}
+              <div class="widget-header">
+                <small class="title text-muted">Вітаємо {{user.first_name}}!</small>
+                <div> 
+                  <a href="">Dashboard</a> <span class="dark-transp"> | </span>
+                  <a href="{% url 'logout' %}"> Вийти</a>
+                </div>
+              </div>
+              {% endif %}
+
 							<a href="{% url 'cart' %}" class="widget-header pl-3 ml-3">
               	<div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
                 <span class="badge badge-pill badge-danger notify"> {{ cart_count }}</span>
               </a>
+              
             </div> <!-- widgets-wrap.// -->
           </div> <!-- col.// -->
       	</div> <!-- row.// -->
