--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -98,7 +98,7 @@
 						<p class="text-center mb-3">
 							<img src="{% static './images/misc/payments.png' %}" height="26">
 						</p>
-						<a href="./place-order.html" class="btn btn-primary btn-block"> Checkout </a>
+						<a href="./place-order.html" class="btn btn-primary btn-block"> Зробити замовлення </a>
 						<a href="{% url 'store' %}" class="btn btn-light btn-block">Продовжити покупки</a>
 					</div> <!-- card-body.// -->
 				</div> <!-- card.// -->
